--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         ></a>
         <nav>
           <ul>
-            <a href="HTML.html"><li>HOME</li></a>
+            <a href="index.html"><li>HOME</li></a>
             <a href="MENU.html"><li>MENU</li></a>
             <a href="localisation.html"><li>LOCATIONS</li></a>
             <a href="CONTACT.html"><li>CONTACT</li></a>
