--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <body>
     <div class="hero">
       <header>
-        <a href="HTML.html"
+        <a href="index.html"
           ><div class="logo"><img src="images/LOGO WEB.png" alt="" /></div
         ></a>
         <nav>
           <ul>
-            <a href="HTML.html"><li>HOME</li></a>
+            <a href="index.html"><li>HOME</li></a>
             <a href="MENU.html"><li>MENU</li></a>
             <a href="localisation.html"><li>LOCATIONS</li></a>
             <a href="CONTACT.html"><li>CONTACT</li></a>
@@ -221,7 +221,7 @@
       <section>
         <div class="head">
           <ul>
-            <a href="HTML.html"><li>HOME</li></a>
+            <a href="index.html"><li>HOME</li></a>
             <a href="MENU.html"><li>MENU</li></a>
             <a href="localisation.html"><li>LOCATIONS</li></a>
           </ul>
