--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <section>
         <div class="head">
           <ul>
-            <a href="HTML.html"><li>HOME</li></a>
+            <a href="index.html"><li>HOME</li></a>
             <a href="MENU.html"><li>MENU</li></a>
             <a href="localisation.html"><li>LOCATIONS</li></a>
           </ul>
