--- a/MENU.html
+++ b/MENU.html
@@ -10,7 +10,7 @@
 <body>
   <div class="hero">
     <header>
-      <a href="HTML.html"><div class="logo"><img src="images/LOGO WEB.png" alt=""></div></a>
+      <a href="index.html"><div class="logo"><img src="images/LOGO WEB.png" alt=""></div></a>
         <nav>
             <ul>
                 <a href="index.html"><li>HOME</li></a>
@@ -97,7 +97,7 @@
       <section>
           <div class="head">
               <ul>
-                  <a href="HTML.html"><li>HOME</li></a>
+                  <a href="index.html"><li>HOME</li></a>
                   <a href="MENU.html"><li>MENU</li></a>
                   <a href="localisation.html"><li>LOCATIONS</li></a>
               </ul>
