--- a/localisation.html
+++ b/localisation.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <header>
-            <a href="HTML.html"><div class="logo"><img src="images/LOGO WEB.png" alt=""></div></a>
+            <a href="index.html"><div class="logo"><img src="images/LOGO WEB.png" alt=""></div></a>
             <nav>
                 <ul>
                   <a href="index.html"><li>HOME</li></a>
