--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="hero">
       <header>
-        <a href="HTML.html"
+        <a href="index.html"
           ><div class="logo"><img src="images/LOGO WEB.png" alt="" /></div
         ></a>
         <nav>
