--- a/CONTACT.html
+++ b/CONTACT.html
@@ -13,7 +13,7 @@
             <a href="index.html"><div class="logo"><img src="images/LOGO WEB.png" alt=""></div></a>
             <nav>
                 <ul>
-                <a href="HTML.html"><li>HOME</li></a>
+                <a href="index.html"><li>HOME</li></a>
                 <a href="MENU.html"><li>MENU</li></a>
                 <a href="localisation.html"><li>LOCATIONS</li></a>
                 <a href="CONTACT.html"><li>CONTACT</li></a>
